# unitree_mujoco

simulate/: CMakeLists.txt
simulate/src/: main.cc  unitree_legged_bridge.cc  unitree_legged_bridge.h
unitree_robots/aliengo/: aliengo.urdf  aliengo.xml  robot_def.yml  scene.xml  scene_terrain.xml
unitree_robots/aliengo/assets/: calf.dae  calf_0.mtl  calf_1.mtl  hip.dae  hip.mtl  thigh.dae  thigh.mtl  thigh_mirror.dae  trunk.dae  trunk.mtl
